--- a/delete_site/roles/nginx_config/tasks/main.yml
+++ b/delete_site/roles/nginx_config/tasks/main.yml
@@ -1,6 +1,5 @@
 - name: Delete nginx config
-  ansible.builtin.file:
-    path: /etc/nginx/sites-enabled/{{ item.site }}.conf
+  file:
+    path: /etc/nginx/sites-enabled/{{ site }}.conf
     state: absent
-  loop: "{{ projects | list }}" 
 
